# perimeter_wire

./: .gitignore  .gitmodules  Readme.md
cmake/: generic-gcc-arm-none-eabi.cmake  generic-gcc-avr.cmake
driver/follower/scripts/: follower.py
driver/generator/: CHANGELOG.rst  CMakeLists.txt  package.xml
driver/generator/include/perimeter_wire_generator/: driver.h
driver/generator/src/: com_config.h  console.cpp  console.h  data_link_layer.h  driver.cpp
driver/perimeter_wire_driver/: CMakeLists.txt  package.xml
driver/perimeter_wire_driver/include/perimeter_wire_driver/: perimeter_wire_driver.h
driver/perimeter_wire_driver/src/: app_layer.h  async_serial.h  console.cpp  data_link_layer.h  node.cpp  perimeter_wire_driver.cpp  perimeter_wire_ros.h
driver/sensor/: CHANGELOG.rst  CMakeLists.txt  package.xml
driver/sensor/include/perimeter_wire_sensor/: driver.h
driver/sensor/src/: app_layer.h  async_serial.h  com_config.h  console.cpp  data_link_layer.h  driver.cpp  node.cpp  perimeter_wire_ros.h
firmware/: generator.ods  noise.ods  package.xml  perimeter_wire_firmware.atsln
firmware/GccApplication1/: GccApplication1.atsln
firmware/GccApplication1/GccApplication1/: GccApplication1.componentinfo.xml  GccApplication1.cppproj  main.cpp
firmware/GccApplication1/GccApplication1/src/: asf.h
firmware/arduino/examples/SimpleAudioFrequencyMeter/: AudioFrequencyMeter.cpp  AudioFrequencyMeter.h  FixedPrecision.h  IIRBiquad.h  IIR_Filter.ods  SimpleAudioFrequencyMeter.ino
firmware/bootloader/: CHANGELOG.rst  CMakeLists.txt  Makefile  board_definitions.h  bootloader.cproj  main.c  openocd.cfg  package.xml  sam_ba_monitor.h  samd21_sam_ba.cproj
firmware/bootloader/scripts/: program.sh  program_bootloader.sh
firmware/bootloader/src/: Makefile  board_startup.c  bootloader_samd21x17.ld  sam_ba_monitor.c
firmware/config/: firmware.yaml
firmware/dfp/: Readme.md
firmware/dfp/samd21/scripts/: dap_cortex-m0plus.py
firmware/generator/: CHANGELOG.rst  CMakeLists.txt  atmel_start_pins.h  cmsis  driver_init.c  driver_init.h  error.c  error.h  generator.componentinfo.xml  generator.cproj  main.c  package.xml  perimeter_wire_generator.c  perimeter_wire_generator.h  samd21  uplink.c  uplink.h
firmware/generator/.atmelstart/: AtmelStart.gpdsc  atmel_start_config.atstart
firmware/generator/Config/: RTE_Components.h  board.h  hpl_adc_config.h  hpl_gclk_config.h  hpl_sysctrl_config.h  hpl_tc_config.h  peripheral_clk_config.h  usbd_config.h
firmware/generator/Device_Startup/: samd21e17d_flash.ld  samd21e17d_flash_bl.ld  samd21g18au_flash_bl.ld
firmware/generator/com/: app_layer.h  app_layer_config.h  data_link_layer.h  data_link_layer_config.h  usb_serial.c  usb_serial.h
firmware/generator/config/: RTE_Components.h  board.h  hpl_adc_config.h  hpl_sysctrl_config.h  hpl_tc_config.h  peripheral_clk_config.h  usbd_config.h
firmware/generator/driver/: leds.c  leds.h  perimeter_wire_generator.c  perimeter_wire_generator.h  uplink.c  uplink.h
firmware/generator/examples/: driver_examples.c  driver_examples.h
firmware/generator/hpl/usb/: hpl_usb.c
firmware/generator/include/perimeter_wire_generator/: registers.h
firmware/generator/include/perimeter_wire_generator_firmware/: messages.h
firmware/generator/scripts/: program.sh  program_firmware.sh
firmware/sensor/: CHANGELOG.rst  CMakeLists.txt  Default.xml  Readme.md  atmel_start_pins.h  driver_init.c  driver_init.h  main.c  matching_filter.h  openocd.cfg  package.xml  perimeter_wire_sensor.c  perimeter_wire_sensor.h  samd11  sensor.componentinfo.xml  sensor.cproj  uplink.c  uplink.h
firmware/sensor/.atmelstart/: AtmelStart.env_conf  AtmelStart.gpdsc  atmel_start_config.atstart
firmware/sensor/Config/: RTE_Components.h  board.h  hpl_adc_config.h  hpl_dmac_config.h  hpl_evsys_config.h  hpl_gclk_config.h  hpl_rtc_config.h  hpl_sysctrl_config.h  peripheral_clk_config.h  usbd_config.h
firmware/sensor/Device_Startup/: samd21e17d_flash_bl.ld
firmware/sensor/SimpleAudioFrequencyMeter/: SimpleAudioFrequencyMeter.ino
firmware/sensor/com/: app_layer.h  app_layer_config.h  usb_serial.c  usb_serial.h
firmware/sensor/examples/: driver_examples.c  driver_examples.h
firmware/sensor/include/perimeter_wire_sensor/: messages.h  registers.h
firmware/sensor/include/perimeter_wire_sensor_firmware/: registers.h
firmware/sensor/scripts/: program.sh  program_with_bootloader.sh
firmware/sensor_import/: sensor_import.atsln
firmware/sensor_import/sensor_import/ArduinoCore/: ArduinoCore.componentinfo.xml  (+2 more)
firmware/sensor_simple/: CMakeLists.txt  Makefile  perimeter_wire_firmware.componentinfo.xml  perimeter_wire_firmware.cproj  program.sh
firmware/sensor_simple/debian/: rules.em
firmware/sensor_simple/include/perimeter_wire_firmware/: config.h
firmware/sensor_simple/src/: board.h  error.c  error.h
firmware/sensor_simple/src/com/: app_layer.h  async_serial.h  data_link_layer_config.h
firmware/sensor_simple/src/driver/: perimeter_wire.h
firmware/sensor_simple/src/lib/: circular_buffer.h
firmware/sensor_simple/src/system/: clock.h  timer.h
firmware/src/: main.c
firmware/src/com/: app_layer.c  async_serial.c  data_link_layer.h
firmware/src/system/: scheduler.h
firmware/test/: CHANGELOG.rst  CMakeLists.txt  package.xml  sensor
firmware/test/test/: matching_filter_test.cpp
pcb/: fp-info-cache  local.dcm  local.lib
pcb/footprints.pretty/: Ohmite-TKH.kicad_mod  PowerSO-36.kicad_mod  Spark_Gap_0.4_Pwr.kicad_mod
pcb/generator/: fp-info-cache  fp-lib-table  generator-cache.lib  generator.kicad_pcb  generator.net  generator.pro  generator.sch  pspice-cache.lib  pspice.sch
pcb/sensor/: fp-info-cache  pspice-cache.lib  pspice.sch  sensor-cache.lib  sensor-rescue.lib  sensor.kicad_pcb  sensor.pro  sensor.sch  sym-lib-table
pcb/sensor/ltspice/: pw_my.asc  pw_my.op.raw  pw_my.plt  pw_original.asc  pw_original.op.raw  pw_original.plt  pw_ti.asc  pw_ti.op.raw  pw_ti.raw  pw_ti2.asc  pw_ti2.op.raw
prod/: Testing generator.md  Testing sensor.md  Testing.md  prog_test_sensor.sh  sensor_test.launch
(+21 files in other folders)
