<?xml version="1.0"?>
<package format="2">
  <name>perimeter_wire_sensor_driver</name>
  <version>0.0.2</version>
  <description>The perimeter_wire_sensor_driver package</description>

  <maintainer email="michael.stoll@stolltec.com">Michael Stoll</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  
  <depend>geometry_msgs</depend>
  <depend>perimeter_wire_sensor_firmware</depend>
  <depend>diagnostic_updater</depend>

  <test_depend>roslint</test_depend>
</package>