<?xml version="1.0"?>
<package format="2">
  <name>perimeter_wire_bootloader</name>
  <version>0.0.3</version>
  <description>The perimeter_wire_bootloader package</description>

  <maintainer email="michael.stoll@stolltec.com">Michael Stoll</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gcc-arm-none-eabi</build_depend>
</package>