<?xml version="1.0"?>
<package format="2">
  <name>perimeter_wire_generator_firmware</name>
  <version>0.0.0</version>
  <description>The perimeter_wire_generator_firmware package</description>

  <maintainer email="michael.stoll@stolltec.com">Michael Stoll</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- TODO
    <build_depend>gcc-arm-none-eabi</build_depend>
  <build_depend>avr-libc</build_depend>-->
</package>